--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel='stylesheet' href='index.css'>
 </head>
 <body>
     <div id='application-root'></div>
@@ -12,15 +13,7 @@
     </script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js">
     </script>
-    <script type='text/babel' src="https://unpkg.com/babel-standalone@6/babel.min.js">
-    </script>
-    <script>
-        // javascript code goes here
-        // const appRoot = document.querySelector('#application-root');
-        // ReactDOM.render('Hello World', appRoot);
-        function App() {
-            
-        }
-    </script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin></script>
+    <script type='text/babel' src='index.js'></script>
 </body>
 </html>
